fixed vis page on smaller screens

--- a/static/Main.css
+++ b/static/Main.css
@@ -7,7 +7,7 @@
 body {
     background-color:rgb(26, 26, 26);
     width: 100vw;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 main{
@@ -65,7 +65,6 @@ li a:hover {
 /* Visualisation page */
 .row {
     width: 99%;
-    height: 100%;
     margin: 1%;
     margin-left: 0%;
     padding: 0;
@@ -126,8 +125,9 @@ li a:hover {
 
 /*Vis Box*/
 .viscolumn {
-    width: 79%;
+    width: 78%;
     height: 100%;
+
     padding: 0%;
     float: right; 
     color: white;
@@ -135,7 +135,7 @@ li a:hover {
     margin-left: 1%;
     margin-right: 0%;
     /*background-color: magenta; */
-    display: table;
+
 }
 
 .visbox {
@@ -385,11 +385,8 @@ li a:hover {
 
 .viswrap {
     width: 100%;
-    height: 95%;
-
+    height: 90%;
     /*background-color: magenta; */
-
-    position: relative;
 }
 
 .visframe {
